--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,64 @@
 version: '3.7'
-
 services:
-  db:
-    container_name: cms_db
-    image: postgres:11.1-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
 
-  web:
+  db-fr:
+    container_name: cms_db_fr
+    image: postgres:latest
+    networks:
+      - postgres_network
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres_data_fr:/var/lib/postgresql/data/
+
+  db-uk:
+    container_name: cms_db_uk
+    image: postgres:latest
+    networks:
+      - postgres_network
+    ports:
+      - 5433:5432
+    volumes:
+      - postgres_data_uk:/var/lib/postgresql/data/
+
+  web-fr:
     build:
       context: .
       dockerfile: Dockerfile
-    command: gunicorn web.wsgi:application --bind 0.0.0.0:8000 --workers 3
-    container_name: cms_web
+    command: python manage.py runserver 0.0.0.0:8000
+    container_name: web_fr
     depends_on:
-      - db
+      - db-fr
+    environment:
+      ZAVA_COUNTRY: "fr"
+    networks:
+      - postgres_network
     ports:
       - 8000:8000
     volumes:
       - .:/code
 
+  web-uk:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: python manage.py runserver 0.0.0.0:8001
+    container_name: web_uk
+    depends_on:
+      - db-uk
+    environment:
+      ZAVA_COUNTRY: "uk"
+    networks:
+      - postgres_network
+    ports:
+      - 8001:8001
+    volumes:
+      - .:/code
+
+networks:
+  postgres_network:
+    driver: bridge
+
 volumes:
-  postgres_data:
+  postgres_data_uk:
+  postgres_data_fr:
